--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -151,6 +151,7 @@ body {
     background-size: 960px;
     background-position: right -30vh, left calc(100% + 70vh); /* Initial position */
     transition: background-position 2s ease-in-out;
+    margin: 0;
 }
 
 body.fly-in {
